HEAD
	+ Write logs configuration only when the module is enabled
	+ Use replace instead of href to redirect in Controller::DataTable
	  (This avoids infinite loops if the user press back button)
3.2.8
	+ Automatic report text formatting adapted to Redmine
	+ Fix tab selection in tabbed composite from URL path anchor,
	  for instance, /Maintenance/Events#ConfigureDispatchers
	+ Avoid errors triggered on web administration port validation
	+ ManageAdmins model now also add/removes lpadmin group
3.2.7
	+ Remove lock file in EBox::Util::Lock::unlock()
	+ Decode to utf8 the MySQL database results
	+ Create log database using utf8 charset
	+ Better way to set MySQL password for all the root accounts
	+ Use sharedscripts in zentyal-core logrotate to avoid triggering
	  in every log file
	+ Take into account view customizer on audit logging
	+ Show complex types (more than one field) in audit log
	  while editing by storing the dump of the value
	+ Fix EBox::Types::Composite::cmp to store changes when only last type
	  is modified
3.2.6
	+ Show confirmation dialog before upgrading to 3.3
	+ Fixed general widget packages to avoid error on 'packages to
	  upgrade' section
3.2.5
	+ Upgrade to 3.3 notification in dashboard
	+ Added new communityEdition() helper method in EBox::Global
	+ Add version to header logo
	+ Always reload page after saving changes
	+ Use AJAX call to refresh save change buttons
	+ Copy all the redis keys from 'conf' to 'ro' when saving changes of
	  any module to prevent incoherences
	+ Delete unused stopAllModules() and restartAllModules() in EBox::Global
	+ Workaround against modules changed when saving all changes
	+ Display remote services messages if they exist on Dashboard
	+ Recover from widget function exceptions
	+ Fixed mdstat output processing to remove "(auto-read-only)"
	+ Fixed audit logging of delete actions
	+ Fixed errors with row ID in ManageAdmins table
	+ Added missing EBox::Exceptions uses